# RustyQR

./: .gitignore  .swiftlint.yml  CLAUDE.md  LICENSE  README.md  build.gradle.kts  settings.gradle.kts  version.properties
.claude/: settings.json  settings.local.json
.claude/agents/: android-developer.md  code-reviewer.md  ios-developer.md  kmp-antipattern-scanner.md  kmp-migration-analyzer.md  kmp-platform-impl.md  kmp-scaffolder.md  kmp-swift-interop-checker.md  kmp-version-auditor.md  mobile-architect.md  rust-developer.md
.claude/commands/: create-spec.md
.github/workflows/: android.yml  ios.yml
.husky/: commit-msg  pre-commit
composeApp/: .editorconfig  README.md  build.gradle.kts
config/detekt/: detekt.yml
docs/: ARCHITECTURE.md  rusty-qr-implementation-plan.md  rusty_qr_prd.docx.md
docs/adr/: 002-scan-to-result-navigation.md
gradle/: libs.versions.toml
iosApp/: README.md  project.yml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
rustSDK/: BENCHMARKS.md  Cargo.toml  README.md  deny.toml
rustSDK/crates/ffi/: Cargo.toml  uniffi.toml
rustSDK/crates/ffi/src/: lib.rs
rustySDK/: BENCHMARKS.md  Cargo.toml  Makefile  README.md  rustfmt.toml
rustySDK/.cargo/: config.toml
rustySDK/crates/core/: Cargo.toml
rustySDK/crates/core/src/: command.rs  decoder.rs  encoder.rs  error.rs  types.rs
rustySDK/crates/core/tests/: determinism.rs  jpeg_decode.rs  round_trip.rs  thread_safety.rs
rustySDK/scripts/: build_android.sh  build_ios.sh
scripts/: bootstrap.sh
(+106 files in other folders)
